# 3lab8

./: .gitignore  agent.py  app.py  challenge1_health_checks.py  challenge2_graceful_shutdown.py  config.py  dependencies.py  lifecycle_manager.py  pyproject.toml  test_api.py  test_lifecycle.py
